--- a/assets/style.css
+++ b/assets/style.css
@@ -1,25 +1,40 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-/* header styles */
-header {
-  background-color: aquamarine;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  position: -webkit-sticky;
-  position: sticky;
+
+body {
+  background-color: aqua;
 }
 
-header h1 {
-  background-color: aqua;
-  font-size: 3.5vw;
+/* header / nav bar styles */
+
+header {
+  padding: 20px 35px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-image: url("../assets/images/background.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-position: 80%;
+  z-index: 9999;
+}
+
+header h1 a {
+  font-size: 2.75vw;
   font-style: italic;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  padding: 10px 0;
 }
-header h1:hover {
+
+header h1 a:hover {
   background-color: rgb(187, 153, 187);
   color: white;
   border-radius: 50%;
@@ -41,10 +56,39 @@ header nav a {
   text-decoration-thickness: 3px;
   text-decoration-color: red;
 }
+
 header nav a:hover {
   background-color: rgb(187, 153, 187);
   color: white;
   border-radius: 50%;
+}
+
+/* background image */
+.background {
+  display: flex;
+  display: inline-flexbox;
+  width: 100%;
+  top: 0%;
+  width: 100%;
+}
+
+.background {
+  background-image: url("../assets/images/background.jpg");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  background-attachment: fixed;
+  background-position: 80%;
+  width: 100%;
+  height: 25rem;
+}
+
+section div h2 {
+  display: flexbox;
+  justify-content: flex-end;
 }
 
 @media screen {
