--- a/assets/style.css
+++ b/assets/style.css
@@ -32,6 +32,7 @@ header h1 a {
   font-style: italic;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   padding: 10px 0;
+  flex-grow: 1;
 }
 
 header h1 a:hover {
@@ -77,7 +78,7 @@ header nav a:hover {
   background-size: cover;
   background-position: center;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   flex-wrap: wrap;
   align-items: flex-start;
   background-attachment: fixed;
@@ -87,8 +88,10 @@ header nav a:hover {
 }
 
 section div h2 {
-  display: flexbox;
-  justify-content: flex-end;
+  padding: 20.5rem 3rem 0 0;
+  font-size: 2.25rem;
+  font-style: italic;
+  color: blueviolet;
 }
 
 @media screen {
