Updated HTML and CSS
Fixed bug errors with sizing when screen was becoming smaller and adding Media Query to CSS for a smaller mobile page

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,7 @@
+html {
+  width: fit-content;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -6,7 +10,7 @@
 }
 
 body {
-  background-color: aqua;
+  background-color: rgb(218, 226, 205);
 }
 
 /* header / nav bar styles */
@@ -88,7 +92,8 @@ section div h2 {
 }
 
 /* about me section */
-#about-me {
+
+.primary-section {
   display: flex;
 }
 
@@ -98,6 +103,7 @@ section div h2 {
   font-size: 2rem;
   color: blue;
   width: 20%;
+  font-style: italic;
 }
 
 article p {
@@ -107,9 +113,6 @@ article p {
 }
 
 /* work section */
-#work {
-  display: flex;
-}
 
 #work div {
   display: flex;
@@ -170,6 +173,11 @@ article p {
   height: 250px;
   border: 0.75rem grey solid;
   margin-right: 7rem;
+  opacity: 0.5;
+}
+
+.extra-image a img:hover {
+  opacity: 3;
 }
 
 .extra-image a p {
@@ -186,27 +194,19 @@ article p {
 }
 
 /* resume section */
-#resume {
-  display: flex;
-}
-
-#resume div a {
-  /* width: 70%; */
-}
 
 #resume div a img {
   padding-left: 3rem;
   width: 49%;
 }
 
-/* Contact me */
-#contact-me {
-  display: flex;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  align-items: flex-start;
+#resume div a h3 {
+  color: blue;
+  font-size: 20px;
+  text-align: center;
 }
 
+/* Contact me */
 #contact-me nav ul {
   padding: 15px 15px 0 0;
   margin: 15px 15px 0 0;
@@ -252,10 +252,86 @@ footer div {
 }
 
 @media screen and (max-width: 980px) {
-}
+  body {
+    width: fit-content;
+  }
 
-@media screen and (max-width: 768px) {
-}
+  header {
+    padding-bottom: 0;
+    justify-content: center;
+    position: relative;
+  }
 
-@media screen and (max-width: 575px) {
+  header h1 {
+    width: 100%;
+    text-align: center;
+  }
+
+  header nav ul {
+    margin-top: 20px;
+    width: 100%;
+    justify-content: center;
+  }
+
+  header nav ul li a {
+    font-size: 20px;
+  }
+
+  header nav ul li a:hover {
+    background: var(--primary-color);
+    color: var(--secondary-color);
+    border-radius: 15px;
+    text-shadow: none;
+  }
+
+  .background {
+    background-size: cover;
+    width: 100%;
+    height: 5rem;
+  }
+
+  section div h2 {
+    font-size: 20px;
+  }
+
+  .primary-section-header {
+    font-size: 20px;
+    padding-bottom: 0;
+    justify-content: center;
+    position: relative;
+    color: rgb(58, 183, 241);
+    border-right: none;
+  }
+
+  article p {
+    padding-left: 2rem;
+    font-size: 1.75rem;
+    width: 60%;
+  }
+
+  .run-buddy img {
+    padding-right: 5px;
+    width: fit-content;
+  }
+  .extra-image a img {
+    width: fit-content;
+  }
+
+  #resume div a img {
+    padding-left: 3rem;
+    width: fit-content;
+  }
+
+  #resume div a h3 {
+    color: blue;
+    font-size: 20px;
+    text-align: center;
+  }
+
+  #contact-me nav ul li {
+    display: inline;
+    list-style: none;
+    font-size: 4vw;
+    margin-left: 3vw;
+  }
 }
