--- a/assets/style.css
+++ b/assets/style.css
@@ -84,6 +84,11 @@ header nav a:hover {
   height: 25rem;
 }
 
+.avatar img {
+  width: 40%;
+  height: 60%;
+}
+
 section div h2 {
   padding: 20.5rem 3rem 0 0;
   font-size: 2.25rem;
@@ -290,8 +295,15 @@ footer div {
     height: 5rem;
   }
 
+  .avatar img {
+    width: 20%;
+    height: 20%;
+    padding: 0 0 0 10rem;
+  }
+
   section div h2 {
     font-size: 20px;
+    padding: 2rem 0 0 0rem;
   }
 
   .primary-section-header {
